Create button logic and a smartCloseTo method
Tries to go to a goal, if not possible, explores, if after exploration still not possible, tries to press a button -> explored -> tries to go to the goal again.